<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation.xml"
    app:startDestination="@id/eventListFragment">


    <fragment
        android:id="@+id/eventListFragment"
        android:name="br.com.murilofarias.checkineventos.ui.eventlist.EventListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_event_list" >
        <action
            android:id="@+id/action_showDetail"
            app:destination="@id/eventDetailFragment" />
        <action
            android:id="@+id/action_eventListFragment_to_checkInInputFragment"
            app:destination="@id/checkInInputFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="br.com.murilofarias.checkineventos.ui.eventdetail.EventDetailFragment"
        android:label="@string/event_details_title"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="selectedEvent"
            app:argType="br.com.murilofarias.checkineventos.data.model.Event"
            />
        <action
            android:id="@+id/action_eventDetailFragment_to_checkInInputFragment"
            app:destination="@id/checkInInputFragment" />
    </fragment>

    <fragment
        android:id="@+id/checkInInputFragment"
        android:name="br.com.murilofarias.checkineventos.ui.checkininput.CheckInInputFragment"
        android:label="@string/info_checkin"
        tools:layout="@layout/fragment_check_in_input" >
        <action
            android:id="@+id/action_checkInInputFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
    </fragment>

</navigation>