<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="br.com.murilofarias.checkineventos.ui.eventdetail.EventDetailViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BG">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".DetailFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/BG"
                android:padding="@dimen/normal_spacing">

                <TextView
                    android:id="@+id/date_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#de000000"
                    android:textSize="16sp"
                    app:formattedDateText="@{viewModel.selectedEvent.date}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/event_date_example" />

                <TextView
                    android:id="@+id/event_title_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@{viewModel.selectedEvent.title}"
                    android:textColor="#de000000"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_value_text"
                    tools:text="@string/event_title_example" />

                <ImageView
                    android:id="@+id/main_photo_image"
                    android:layout_width="0dp"
                    android:layout_height="266dp"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewModel.selectedEvent.image}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_title_text"
                    tools:src="@drawable/event_image" />


                <TextView
                    android:id="@+id/price_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:text="@string/price_label"
                    android:textStyle="bold"
                    android:textColor="#de000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/main_photo_image" />

                <TextView
                    android:id="@+id/price_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:textColor="#de000000"
                    android:textSize="20sp"
                    app:formattedPriceText="@{viewModel.selectedEvent.price}"
                    app:layout_constraintStart_toEndOf="@+id/description_label_text"
                    app:layout_constraintTop_toBottomOf="@id/main_photo_image"
                    tools:text="@string/event_price_example" />

                <TextView
                    android:id="@+id/description_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:text="@string/description_label"
                    android:textStyle="bold"
                    android:textColor="#de000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/price_label_text"/>

                <TextView
                    android:id="@+id/description_value_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:text="@{viewModel.selectedEvent.description}"
                    android:textColor="#de000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_label_text"
                    tools:text="@string/event_description_example"/>

                <TextView
                    android:id="@+id/location_label_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:text="@string/location_label"
                    android:textStyle="bold"
                    android:textColor="#de000000"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description_value_text"/>

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="266dp"
                    tools:context=".ui.MainActivity"
                    android:layout_marginTop="@dimen/half_spacing"
                    android:layout_marginBottom="@dimen/normal_spacing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_label_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="69dp"
            android:layout_gravity="bottom"
            android:elevation="@dimen/checkin_button_elevation"
            android:paddingRight="@dimen/normal_spacing"
            android:paddingLeft="@dimen/normal_spacing"
            >

            <ProgressBar
                android:id="@+id/spinner_checkin_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkin_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/do_checkin"/>

        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>